apps/odin/phpmyadmin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels:
    app.kubernetes.io/name: phpmyadmin
  annotations:
    gethomepage.dev/description: phpmyadmin
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: phpmyadmin.png
    gethomepage.dev/name: phpMyAdmin
    gethomepage.dev/statusStyle: dot
spec:
  hostnames:
    - phpmyadmin-uat.neokube.net
